--- a/FakerSpotter/Pages/Finish.razor
+++ b/FakerSpotter/Pages/Finish.razor
@@ -20,7 +20,7 @@
             </FigureCaption>
         </Figure>
         <Paragraph Margin="Margin.Is4.FromTop">
-            Please give a feedback of your experience by clicking <a href="https://docs.google.com/forms/d/e/1FAIpQLSfFt_EQeDqJ2KfOlvpIujcnee6aGIzaIRujXpkY7Z3ZOGE5Yw/viewform?usp=sf_link" target="_blank">here</a>
+            Please give a feedback of your experience by clicking <a href="https://docs.google.com/forms/d/e/1FAIpQLSfFt_EQeDqJ2KfOlvpIujcnee6aGIzaIRujXpkY7Z3ZOGE5Yw/viewform?usp=sf_link">here</a>
         </Paragraph>
         <Button Color="Color.Primary" Clicked="OnRestart">Restart</Button>
     </Container>
