--- a/FakerSpotter/Pages/Index.razor
+++ b/FakerSpotter/Pages/Index.razor
@@ -4,7 +4,7 @@
     <Jumbotron Background="Background.Light" Padding="Padding.Is4">
         <JumbotronTitle Size="JumbotronTitleSize.Is4">FakerSpotter</JumbotronTitle>
         <JumbotronSubtitle>
-            A cyberwellness digital toolkit for learning on how to protect yourself from fake news!
+            A digital toolkit for learning on how to protect yourself from fake news!
         </JumbotronSubtitle>
         <Divider/>
         <Paragraph>
