--- a/FakerSpotter/Pages/Leaderboards.razor
+++ b/FakerSpotter/Pages/Leaderboards.razor
@@ -3,8 +3,7 @@
 <Animate Animation="Animations.Fade" Duration="TimeSpan.FromSeconds(2)">
     <Title Size="3" TextAlignment="TextAlignment.Center">Leaderboards</Title>
     <Divider/>
-    <Paragraph TextAlignment="TextAlignment.Center">The leaderboards is currently unavailable.</Paragraph>
-    <!--
+    <Paragraph TextAlignment="TextAlignment.Center">The leaderboards is currently unavailable because database services are down. But here a sample of what it looks like.</Paragraph>
     <Table Hoverable="true">
         <TableHeader>
             <TableRow>
@@ -15,26 +14,65 @@
         </TableHeader>
         <TableBody>
             <TableRow>
-                <TableHeaderCell>1000</TableHeaderCell>
-                <TableRowCell>Dennise (Example)</TableRowCell>
-                <TableRowCell>Cyberwellness Arcane Champion</TableRowCell>
+                <TableHeaderCell>1001</TableHeaderCell>
+                <TableRowCell>Dennise</TableRowCell>
+                <TableRowCell>
+                    <img src="assets/images/icon.png" width="24"/>
+                    <Text VerticalAlignment="VerticalAlignment.Middle">
+                        Cyberwellness Arcane Champion
+                    </Text>
+                </TableRowCell>
             </TableRow>
             <TableRow>
                 <TableHeaderCell>871</TableHeaderCell>
-                <TableRowCell>Yu Teck (Example)</TableRowCell>
-                <TableRowCell>Cyberwellness Arcane Champion</TableRowCell>
+                <TableRowCell>Syabil</TableRowCell>
+                <TableRowCell>
+                    <img src="assets/images/awards/champion.svg" width="24"/>
+                    <Text VerticalAlignment="VerticalAlignment.Middle">
+                        Cyberwellness Champion
+                    </Text>
+                </TableRowCell>
             </TableRow>
             <TableRow>
-                <TableHeaderCell>576</TableHeaderCell>
-                <TableRowCell>Chester (Example)</TableRowCell>
-                <TableRowCell>Cyberwellness Arcane Champion</TableRowCell>
+                <TableHeaderCell>686</TableHeaderCell>
+                <TableRowCell>Harith</TableRowCell>
+                <TableRowCell>
+                    <img src="assets/images/awards/master.svg" width="24"/>
+                    <Text VerticalAlignment="VerticalAlignment.Middle">
+                        Cyberwellness Master
+                    </Text>
+                </TableRowCell>
+            </TableRow>
+            <TableRow>
+                <TableHeaderCell>599</TableHeaderCell>
+                <TableRowCell>Aqilah</TableRowCell>
+                <TableRowCell>
+                    <img src="assets/images/awards/apprentice.svg" width="24"/>
+                    <Text VerticalAlignment="VerticalAlignment.Middle">
+                        Cyberwellness Apprentice
+                    </Text>
+                </TableRowCell>
             </TableRow>
             <TableRow>
                 <TableHeaderCell>432</TableHeaderCell>
-                <TableRowCell>Jia Wei (Example)</TableRowCell>
-                <TableRowCell>Cyberwellness Arcane Champion</TableRowCell>
+                <TableRowCell>Amanda</TableRowCell>
+                <TableRowCell>
+                    <img src="assets/images/awards/apprentice.svg" width="24"/>
+                    <Text VerticalAlignment="VerticalAlignment.Middle">
+                        Cyberwellness Apprentice
+                    </Text>
+                </TableRowCell>
+            </TableRow>
+            <TableRow>
+                <TableHeaderCell>372</TableHeaderCell>
+                <TableRowCell>Mirza</TableRowCell>
+                <TableRowCell>
+                    <img src="assets/images/awards/novice.svg" width="24"/>
+                    <Text VerticalAlignment="VerticalAlignment.Middle">
+                        Cyberwellness Novice
+                    </Text>
+                </TableRowCell>
             </TableRow>
         </TableBody>
     </Table>
-    -->
 </Animate>
