--- a/FakerSpotter/wwwroot/assets/app.css
+++ b/FakerSpotter/wwwroot/assets/app.css
@@ -1,44 +1,24 @@
 ﻿﻿
 
-html, body
-{
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-}
+html, body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; }
 
-a, .btn-link
-{
-    color: #0366d6;
-}
+a, .btn-link { color: #0366d6; }
 
-.btn-primary
-{
+.btn-primary {
     background-color: #1b6ec2;
     border-color: #1861ac;
     color: #fff;
 }
 
-.content
-{
-    padding-top: 1.1rem;
-}
+.content { padding-top: 1.1rem; }
 
-.valid.modified:not([type=checkbox])
-{
-    outline: 1px solid #26b050;
-}
+.valid.modified:not([type=checkbox]) { outline: 1px solid #26b050; }
 
-.invalid
-{
-    outline: 1px solid red;
-}
+.invalid { outline: 1px solid red; }
 
-.validation-message
-{
-    color: red;
-}
+.validation-message { color: red; }
 
-#blazor-error-ui
-{
+#blazor-error-ui {
     background: lightyellow;
     bottom: 0;
     box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.2);
@@ -50,8 +30,7 @@ a, .btn-link
     z-index: 1000;
 }
 
-#blazor-error-ui .dismiss
-{
+#blazor-error-ui .dismiss {
     cursor: pointer;
     position: absolute;
     right: 0.75rem;
