--- a/FakerSpotter/Pages/Leaderboards.razor
+++ b/FakerSpotter/Pages/Leaderboards.razor
@@ -3,7 +3,7 @@
 <Animate Animation="Animations.Fade" Duration="TimeSpan.FromSeconds(2)">
     <Title Size="3" TextAlignment="TextAlignment.Center">Leaderboards</Title>
     <Divider/>
-    <Paragraph TextAlignment="TextAlignment.Center">The leaderboards is currently unavailable because database services are down. But here a sample of what it looks like.</Paragraph>
+    <Paragraph TextAlignment="TextAlignment.Center">The leaderboards is currently unavailable because database services are down. But here's a sample of what it looks like.</Paragraph>
     <Table Hoverable="true">
         <TableHeader>
             <TableRow>
