--- a/FakerSpotter/Pages/Leaderboards.razor
+++ b/FakerSpotter/Pages/Leaderboards.razor
@@ -17,7 +17,7 @@
                 <TableHeaderCell>1001</TableHeaderCell>
                 <TableRowCell>Dennise</TableRowCell>
                 <TableRowCell>
-                    <img src="assets/images/icon.png" width="24"/>
+                    <Image Source="assets/images/icon.png" Style="width: 24px;"/>
                     <Text VerticalAlignment="VerticalAlignment.Middle">
                         Cyberwellness Arcane Champion
                     </Text>
@@ -27,7 +27,7 @@
                 <TableHeaderCell>871</TableHeaderCell>
                 <TableRowCell>Syabil</TableRowCell>
                 <TableRowCell>
-                    <img src="assets/images/awards/champion.svg" width="24"/>
+                    <Image Source="assets/images/awards/champion.svg" Style="width: 24px;"/>
                     <Text VerticalAlignment="VerticalAlignment.Middle">
                         Cyberwellness Champion
                     </Text>
@@ -37,7 +37,7 @@
                 <TableHeaderCell>686</TableHeaderCell>
                 <TableRowCell>Harith</TableRowCell>
                 <TableRowCell>
-                    <img src="assets/images/awards/master.svg" width="24"/>
+                    <Image Source="assets/images/awards/master.svg" Style="width: 24px;"/>
                     <Text VerticalAlignment="VerticalAlignment.Middle">
                         Cyberwellness Master
                     </Text>
@@ -47,7 +47,7 @@
                 <TableHeaderCell>599</TableHeaderCell>
                 <TableRowCell>Aqilah</TableRowCell>
                 <TableRowCell>
-                    <img src="assets/images/awards/apprentice.svg" width="24"/>
+                    <Image Source="assets/images/awards/apprentice.svg" Style="width: 24px;"/>
                     <Text VerticalAlignment="VerticalAlignment.Middle">
                         Cyberwellness Apprentice
                     </Text>
@@ -57,7 +57,7 @@
                 <TableHeaderCell>432</TableHeaderCell>
                 <TableRowCell>Amanda</TableRowCell>
                 <TableRowCell>
-                    <img src="assets/images/awards/apprentice.svg" width="24"/>
+                    <Image Source="assets/images/awards/apprentice.svg" Style="width: 24px;"/>
                     <Text VerticalAlignment="VerticalAlignment.Middle">
                         Cyberwellness Apprentice
                     </Text>
@@ -67,7 +67,7 @@
                 <TableHeaderCell>372</TableHeaderCell>
                 <TableRowCell>Mirza</TableRowCell>
                 <TableRowCell>
-                    <img src="assets/images/awards/novice.svg" width="24"/>
+                    <Image Source="assets/images/awards/novice.svg" Style="width: 24px;"/>
                     <Text VerticalAlignment="VerticalAlignment.Middle">
                         Cyberwellness Novice
                     </Text>
