--- a/FakerSpotter/App.razor
+++ b/FakerSpotter/App.razor
@@ -4,10 +4,10 @@
     </Found>
     <NotFound>
         <LayoutView Layout="typeof(MainLayout)">
-            <div style="text-align: center;">
-                <h3>404</h3>
-                <p>Sorry, there's nothing at this address.</p>
-            </div>
+            <Container TextAlignment="TextAlignment.Center">
+                <Title Size="3">404</Title>
+                <Paragraph>Sorry, there's nothing at this address.</Paragraph>
+            </Container>
         </LayoutView>
     </NotFound>
 </Router>
