--- a/FakerSpotter/wwwroot/assets/app.css
+++ b/FakerSpotter/wwwroot/assets/app.css
@@ -1,8 +1,10 @@
-﻿﻿
+﻿﻿html, body {
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
 
-html, body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; }
-
-a, .btn-link { color: #0366d6; }
+a, .btn-link {
+    color: #0366d6;
+}
 
 .btn-primary {
     background-color: #1b6ec2;
@@ -10,13 +12,21 @@ a, .btn-link { color: #0366d6; }
     color: #fff;
 }
 
-.content { padding-top: 1.1rem; }
+.content {
+    padding-top: 1.1rem;
+}
 
-.valid.modified:not([type=checkbox]) { outline: 1px solid #26b050; }
+.valid.modified:not([type=checkbox]) {
+    outline: 1px solid #26b050;
+}
 
-.invalid { outline: 1px solid red; }
+.invalid {
+    outline: 1px solid red;
+}
 
-.validation-message { color: red; }
+.validation-message {
+    color: red;
+}
 
 #blazor-error-ui {
     background: lightyellow;
