Upgraded project to .NET 6

--- a/FakerSpotter/App.razor
+++ b/FakerSpotter/App.razor
@@ -5,7 +5,7 @@
     <NotFound>
         <LayoutView Layout="typeof(MainLayout)">
             <Container TextAlignment="TextAlignment.Center">
-                <Title Size="3">404</Title>
+                <Heading Size="HeadingSize.Is3">404</Heading>
                 <Paragraph>Sorry, there's nothing at this address.</Paragraph>
             </Container>
         </LayoutView>
