--- a/FakerSpotter/Components/Questionnaires/StatementPanel.razor
+++ b/FakerSpotter/Components/Questionnaires/StatementPanel.razor
@@ -1,5 +1,7 @@
-﻿<Title Size="5">@Question.Statement</Title>
+﻿<Heading Size="HeadingSize.Is5">@Question.Statement</Heading>
+
 <br/>
+
 <ListGroup Mode="ListGroupMode.Selectable">
     <ListGroupItem Color="@FactOptionColor" Clicked="OnFactPicked">Fact</ListGroupItem>
     <ListGroupItem Color="@OpinionOptionColor" Clicked="OnOpinionPicked">Opinion</ListGroupItem>
