--- a/FakerSpotter/Pages/About.razor
+++ b/FakerSpotter/Pages/About.razor
@@ -1,7 +1,7 @@
 ﻿@page "/about"
 
 <Animate Animation="Animations.Fade" Duration="TimeSpan.FromSeconds(2)">
-    <Title Size="3" TextAlignment="TextAlignment.Center">About</Title>
+    <Heading Size="HeadingSize.Is3" TextAlignment="TextAlignment.Center">About</Heading>
     <Divider/>
     <MarkdownPanel Content="@MarkdownContent"/>
     <Paragraph TextAlignment="TextAlignment.Center">
