--- a/FakerSpotter/Pages/Intro.razor
+++ b/FakerSpotter/Pages/Intro.razor
@@ -1,7 +1,7 @@
 ﻿@page "/intro"
 
 <Animate Animation="Animations.Fade" Duration="TimeSpan.FromSeconds(2)">
-    <Title Size="3" TextAlignment="TextAlignment.Center">Intro</Title>
+    <Heading Size="HeadingSize.Is3" TextAlignment="TextAlignment.Center">Intro</Heading>
     <Divider/>
     <MarkdownPanel Content="@MarkdownContent"/>
     <Paragraph TextAlignment="TextAlignment.Center">
