--- a/FakerSpotter/Pages/Leaderboards.razor
+++ b/FakerSpotter/Pages/Leaderboards.razor
@@ -1,7 +1,7 @@
 ﻿@page "/leaderboards"
 
 <Animate Animation="Animations.Fade" Duration="TimeSpan.FromSeconds(2)">
-    <Title Size="3" TextAlignment="TextAlignment.Center">Leaderboards</Title>
+    <Heading Size="HeadingSize.Is3" TextAlignment="TextAlignment.Center">Leaderboards</Heading>
     <Divider/>
     <Paragraph TextAlignment="TextAlignment.Center">The leaderboards is currently unavailable because database services are down. But here's a sample of what it looks like.</Paragraph>
     <Table Hoverable="true">
