--- a/FakerSpotter/Components/Questionnaires/HeadlineClosedPanel.razor
+++ b/FakerSpotter/Components/Questionnaires/HeadlineClosedPanel.razor
@@ -1,5 +1,7 @@
-﻿<Title Size="5">@Question.Headline</Title>
+﻿<Heading Size="HeadingSize.Is5">@Question.Headline</Heading>
+
 <br/>
+
 <ListGroup Mode="ListGroupMode.Selectable">
     <ListGroupItem Color="@RealOptionColor" Clicked="OnRealPicked">Real News</ListGroupItem>
     <ListGroupItem Color="@FakeOptionColor" Clicked="OnFakePicked">Fake News</ListGroupItem>
