--- a/FakerSpotter/wwwroot/assets/app.css
+++ b/FakerSpotter/wwwroot/assets/app.css
@@ -1,31 +1,8 @@
 ﻿﻿html, body {
+    background: #e3e3e3;
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-}
-
-a, .btn-link {
-    color: #0366d6;
-}
-
-.btn-primary {
-    background-color: #1b6ec2;
-    border-color: #1861ac;
-    color: #fff;
-}
-
-.content {
-    padding-top: 1.1rem;
-}
-
-.valid.modified:not([type=checkbox]) {
-    outline: 1px solid #26b050;
-}
-
-.invalid {
-    outline: 1px solid red;
-}
-
-.validation-message {
-    color: red;
+    height: 100%;
+    width: 100%;
 }
 
 #blazor-error-ui {
