--- a/FakerSpotter/Pages/Rooms/Room3.razor
+++ b/FakerSpotter/Pages/Rooms/Room3.razor
@@ -1,6 +1,6 @@
 ﻿@page "/room/3"
 
-<RoomPanel RoomName="@string.Format("Room 3: Spot the fake news! ({0}/5)", QuestionsAnswered)" IsCompleted="UserSettings.IsRoomThreeCompleted" IsLocked="!UserSettings.IsRoomTwoCompleted" NextRoomEndpoint="finish" PreviousRoomEndpoint="room2">
+<RoomPanel RoomName="@string.Format("Room 3: Spot the fake news! ({0}/5)", QuestionsAnswered)" RoomPoints="Points" IsCompleted="UserSettings.IsRoomThreeCompleted" IsLocked="!UserSettings.IsRoomTwoCompleted" NextRoomEndpoint="finish" PreviousRoomEndpoint="room2">
     <RoomContent>
         @QuestionPanel
     </RoomContent>
