--- a/FakerSpotter/_Imports.razor
+++ b/FakerSpotter/_Imports.razor
@@ -10,12 +10,12 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 
-@using FakerSpotter
-@using FakerSpotter.Components
-@using FakerSpotter.Components.Questionnaires
-@using FakerSpotter.Core
-@using FakerSpotter.Core.Data
-
-@using BlazorAnimate
 @using Blazored.LocalStorage
 @using Blazorise
+@using Markdig
+
+@using FakerSpotter
+@using FakerSpotter.Components
+@using FakerSpotter.Core
+@using FakerSpotter.Core.Data
+@using FakerSpotter.Layouts
