--- a/FakerSpotter/wwwroot/assets/app.css
+++ b/FakerSpotter/wwwroot/assets/app.css
@@ -1,6 +1,4 @@
-﻿﻿html, body {
-    background: #e3e3e3;
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+﻿html, body {
     height: 100%;
     width: 100%;
 }
