--- a/FakerSpotter/Components/MarkdownPanel.razor
+++ b/FakerSpotter/Components/MarkdownPanel.razor
@@ -1,22 +1,11 @@
-﻿@using Markdig
-
-@((MarkupString)HtmlContent)
+﻿@if (!string.IsNullOrEmpty(Content))
+{
+    @((MarkupString)Markdown.ToHtml(Content))
+}
 
 @code
 {
 
-    [Parameter]
-    public string Content { get; set; }
-
-    private string HtmlContent
-    {
-        get
-        {
-            if (string.IsNullOrEmpty(Content))
-                return string.Empty;
-            var pipeline = new MarkdownPipelineBuilder().UseAdvancedExtensions().Build();
-            return Markdown.ToHtml(Content, pipeline);
-        }
-    }
+    [Parameter] public string? Content { get; set; }
 
 }
