--- a/FakerSpotter/Pages/Index.razor
+++ b/FakerSpotter/Pages/Index.razor
@@ -1,18 +1,16 @@
 ﻿@page "/"
 
-<Animate Animation="Animations.Fade" Duration="TimeSpan.FromSeconds(2)">
-    <Jumbotron Background="Background.Light" Padding="Padding.Is4">
-        <JumbotronTitle Size="JumbotronTitleSize.Is4">FakerSpotter</JumbotronTitle>
-        <JumbotronSubtitle>
-            A cyberwellness digital toolkit for learning on how to protect yourself from fake news!
-        </JumbotronSubtitle>
-        <Divider/>
-        <Paragraph>
-            It is recommended that you use a mobile (phone) device for a better experience.
-        </Paragraph>
-        <Buttons>
-            <Button Color="Color.Primary" Type="ButtonType.Link" To="intro">Continue</Button>
-            <Button Color="Color.Secondary" Type="ButtonType.Link" To="about">About</Button>
-        </Buttons>
-    </Jumbotron>
-</Animate>
+<Jumbotron Background="Background.Light" Padding="Padding.Is4">
+    <JumbotronTitle Size="JumbotronTitleSize.Is4">FakerSpotter</JumbotronTitle>
+    <JumbotronSubtitle>
+        A cyberwellness digital toolkit for learning on how to protect yourself from fake news!
+    </JumbotronSubtitle>
+    <Divider/>
+    <Paragraph>
+        It is recommended that you use a mobile device for a better experience.
+    </Paragraph>
+    <Buttons>
+        <Button Color="Color.Primary" Type="ButtonType.Link" To="intro">Start</Button>
+        <Button Color="Color.Secondary" Type="ButtonType.Link" To="about">About</Button>
+    </Buttons>
+</Jumbotron>
