--- a/FakerSpotter/Layouts/MainLayout.razor
+++ b/FakerSpotter/Layouts/MainLayout.razor
@@ -7,7 +7,7 @@
                 <Figure Size="FigureSize.Is32x32">
                     <FigureImage Source="assets/images/icon.png"/>
                 </Figure>
-                <Text VerticalAlignment="VerticalAlignment.Middle">FakerSpotter</Text>
+                FakerSpotter
             </BarBrand>
             <BarToggler/>
             <BarMenu>
