--- a/FakerSpotter/Pages/Index.razor
+++ b/FakerSpotter/Pages/Index.razor
@@ -7,7 +7,7 @@
     </JumbotronSubtitle>
     <Divider/>
     <Paragraph>
-        It is recommended that you use a mobile device for a better experience.
+        It is recommended that you use a wide screen for a better experience.
     </Paragraph>
     <Buttons>
         <Button Color="Color.Primary" Type="ButtonType.Link" To="intro">Start</Button>
