--- a/FakerSpotter/wwwroot/assets/app.css
+++ b/FakerSpotter/wwwroot/assets/app.css
@@ -1,6 +1,25 @@
 ﻿html, body {
     height: 100%;
     width: 100%;
+    margin: 0;
+}
+
+.spinner {
+    animation: spin 1s linear infinite;
+    border: 16px solid transparent;
+    border-radius: 50%;
+    border-top: 16px solid blue;
+    height: 128px;
+    left: 50%;
+    margin: -64px 0 0 -64px;
+    position: absolute;
+    top: 50%;
+    width: 128px;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
 
 #blazor-error-ui {
